--- a/styles/scss/menu/_media.scss
+++ b/styles/scss/menu/_media.scss
@@ -3,7 +3,12 @@
     .menu-expand {
       display: none;
     }
+
+    .title {
+      display: block;
+    }
   }
+
   .alergens {
     display: block;
   }
