--- a/styles/scss/menu/_menu-item.scss
+++ b/styles/scss/menu/_menu-item.scss
@@ -1,22 +1,30 @@
 .menu-item {
-  width: 50%;
-  padding: 2px;
+  width: 100%;
+  padding: $menu-item-space-between-items;
 
   &.active {
     .wrapper {
-      background-color: white;
-      border: 1px solid white;
+      background-color: $menu-item-active-background-color;
+      border: 1px solid $menu-item-active-border-color;
+    }
 
-      color: black;
+    .name,
+    .details {
+      color: $menu-item-active-name-font-color;
+    }
+
+    .alergen {
+      border-color: $menu-item-active-name-font-color;
     }
 
     .price span {
-      color: white;
-      background-color: $red;
+      color: $menu-item-active-price-color;
+      background-color: $menu-item-active-price-background-color;
     }
 
     .basket {
-      background-color: $green2;
+      background-color: $menu-item-active-basket-background-color;
+      color: $menu-item-active-basket-color;
 
       button.add {
         display: none;
@@ -29,10 +37,10 @@
 
     .count {
       button {
-        color: black;
-        border: 1px solid black;
+        border: 1px solid $menu-item-active-name-font-color;
+
         svg {
-          fill: black;
+          color: $menu-item-active-name-font-color;
         }
       }
     }
@@ -40,30 +48,23 @@
 
   .wrapper {
     height: 100%;
-    border: 1px solid $green2;
-    border-radius: 10px;
-    padding: 5px;
     width: 100%;
     max-width: 100%;
+    border-radius: 10px;
+    padding: 5px;
+    border: 1px solid $menu-item-border-color;
 
     display: flex;
-    color: white;
-
-    font-family: $font-3;
-    letter-spacing: 1px;
-  }
-
-  p {
-    margin: 0;
   }
 
   .image {
-    overflow: hidden;
+    min-width: 37.59%;
 
     display: flex;
     justify-content: center;
     align-items: center;
-    min-width: 37.59%;
+
+    overflow: hidden;
 
     img {
       max-width: 100%;
@@ -77,6 +78,28 @@
     align-content: space-between;
     max-width: 62.41%;
     width: 100%;
+  }
+
+  .name,
+  .details {
+    line-height: 20px;
+  }
+
+  .name {
+    color: $menu-item-name-font-color;
+    font-size: $menu-item-name-font-size;
+    font-family: $menu-item-name-font-family;
+    margin-bottom: 20px;
+    p {
+      margin: 0;
+    }
+  }
+
+  .details {
+    color: $menu-item-details-font-color;
+    font-size: $menu-item-details-font-size;
+    font-family: $menu-item-details-font-family;
+    font-weight: 300;
   }
 
   .info,
@@ -95,32 +118,35 @@
     order: 2;
     display: flex;
   }
-  .basket {
-    font-size: 25px;
 
+  .price span {
+    border-radius: 5px 0px 0px 5px;
     padding: 5px 10px;
-    background-color: $red;
-    color: white;
+    background-color: $menu-item-price-background-color;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    color: $menu-item-price-color;
+  }
+
+  .basket {
+    padding: 5px 10px;
+    background-color: $menu-item-basket-background-color;
     border-radius: 0 5px 5px 0px;
+
+    font-size: 25px;
 
     button.add {
       display: block;
-      color: white;
+      color: $menu-item-active-basket-color;
     }
 
     button.remove {
       display: none;
-      color: white;
+      color: $menu-item-active-basket-color;
     }
-  }
-
-  .price span {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 5px 10px;
-    background-color: $green2;
-    border-radius: 5px 0px 0px 5px;
   }
 
   .count {
@@ -131,51 +157,53 @@
       margin: 0 10px;
       font-family: $font-2;
       font-weight: bold;
-      color: $green2;
+      color: $menu-item-count-color;
     }
+
     .add {
       order: 3;
     }
+
     .remove {
       order: 1;
     }
+
     span {
       order: 2;
     }
-    button {
+
+    .add,
+    .remove {
+      border: 1px solid $menu-item-name-font-color;
+      color: $menu-item-name-font-color;
+      border-radius: 50%;
+      height: 30px;
+      width: 30px;
+
+      font-size: 15px;
+
       display: flex;
       justify-content: center;
       align-items: center;
-      color: white;
-      font-family: $font-1;
-      height: 25px;
-      width: 25px;
-      border: 1px solid white;
-      border-radius: 50%;
-      font-size: 20px;
 
       svg {
-        fill: white;
+        color: white;
       }
     }
   }
 
   .alergen {
-    text-align: center;
-    font-family: $font-1;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
+    display: none;
+    height: $menu-item-alergen-size;
+    width: $menu-item-alergen-size;
 
-    font-size: 10px;
-    height: 18px;
-    width: 18px;
-
-    border: 1px solid white;
+    border: 1px solid $menu-item-name-font-color;
+    border: 1px solid red;
     border-radius: 50%;
-  }
 
-  .details {
-    font-family: $font-1;
+    text-align: center;
+    font-family: $menu-item-alergen-family;
+    font-weight: 300;
+    font-size: $menu-item-alergen-font-size;
   }
 }
