--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -5,9 +5,7 @@
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto&family=Roboto+Slab&display=swap");
-@import url("https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Roboto&family=Roboto+Slab&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Roboto+Slab&family=Roboto:wght@100;400&display=swap");
 html {
   line-height: 1.15;
   /* 1 */
@@ -352,7 +350,7 @@ template {
 }
 
 html {
-  font-family: "Open Sans", sans-serif;
+  font-family: "roboto", sans-serif;
 }
 
 h1,
@@ -361,7 +359,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Roboto Slab", serif;
+  font-family: "Roboto slab", serif;
 }
 
 .hide {
@@ -389,7 +387,7 @@ input[type="submit"] {
   background-image: url("../../images/background.jpg");
   background-attachment: fixed;
   background-size: cover;
-  min-height: calc(100vh -20px);
+  min-height: 100vh;
   padding: 10px 20px;
   max-width: 1280px;
   margin-left: auto;
@@ -401,31 +399,33 @@ input[type="submit"] {
   z-index: 2;
   top: 0;
   left: 50%;
-  width: 100%;
-  max-width: 1280px;
-  padding: 20px;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
+  max-width: 1280px;
+  width: 100%;
+  padding: 20px;
 }
 
 .menu .navigation .wrapper {
+  border-radius: 10px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  background-color: black;
-  border-radius: 10px;
-  color: white;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  background-color: black;
+  color: white;
   padding: 10px 20px;
 }
 
 .menu .navigation .title {
+  font-family: "Roboto Slab", serif;
   position: relative;
+  display: none;
 }
 
 .menu .navigation .title h1 {
@@ -487,17 +487,17 @@ input[type="submit"] {
 .menu .navigation .total {
   position: relative;
   right: -50%;
-  background-color: #b30908;
   padding: 2px 4px;
   border-radius: 5px;
+  background-color: #b30908;
 }
 
 .menu .navigation .user button,
 .menu .navigation .basket button {
-  border-radius: 50%;
-  border: 1px solid white;
   height: 40px;
   width: 40px;
+  border-radius: 50%;
+  border: 1px solid white;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -511,11 +511,11 @@ input[type="submit"] {
 
 .menu .menu-navigation {
   overflow-y: auto;
+  min-width: 25.51%;
   font-size: 25px;
   color: white;
-  min-width: 25.51%;
-  overflow-y: auto;
   font-weight: bold;
+  overflow-y: auto;
 }
 
 .menu .menu-navigation h1 {
@@ -527,9 +527,9 @@ input[type="submit"] {
 }
 
 .menu .menu-navigation ul {
-  font-family: "Roboto Slab", serif;
-  letter-spacing: 1px;
   height: 100%;
+  width: 100%;
+  padding: 0;
   list-style-type: none;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -539,8 +539,8 @@ input[type="submit"] {
       -ms-flex-direction: column;
           flex-direction: column;
   justify-items: stretch;
-  padding: 0;
-  width: 100%;
+  font-family: "Roboto Slab", serif;
+  letter-spacing: 1px;
 }
 
 .menu .menu-navigation ul a {
@@ -601,14 +601,22 @@ input[type="submit"] {
 }
 
 .menu .menu-card .menu-item {
-  width: 50%;
+  width: 100%;
   padding: 2px;
 }
 
 .menu .menu-card .menu-item.active .wrapper {
   background-color: white;
   border: 1px solid white;
+}
+
+.menu .menu-card .menu-item.active .name,
+.menu .menu-card .menu-item.active .details {
   color: black;
+}
+
+.menu .menu-card .menu-item.active .alergen {
+  border-color: black;
 }
 
 .menu .menu-card .menu-item.active .price span {
@@ -618,6 +626,7 @@ input[type="submit"] {
 
 .menu .menu-card .menu-item.active .basket {
   background-color: #8bcc9a;
+  color: white;
 }
 
 .menu .menu-card .menu-item.active .basket button.add {
@@ -629,35 +638,27 @@ input[type="submit"] {
 }
 
 .menu .menu-card .menu-item.active .count button {
-  color: black;
   border: 1px solid black;
 }
 
 .menu .menu-card .menu-item.active .count button svg {
-  fill: black;
+  color: black;
 }
 
 .menu .menu-card .menu-item .wrapper {
   height: 100%;
-  border: 1px solid #8bcc9a;
-  border-radius: 10px;
-  padding: 5px;
   width: 100%;
   max-width: 100%;
+  border-radius: 10px;
+  padding: 5px;
+  border: 1px solid #8bcc9a;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  color: white;
-  font-family: "Roboto Slab", serif;
-  letter-spacing: 1px;
-}
-
-.menu .menu-card .menu-item p {
-  margin: 0;
 }
 
 .menu .menu-card .menu-item .image {
-  overflow: hidden;
+  min-width: 37.59%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -667,7 +668,7 @@ input[type="submit"] {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  min-width: 37.59%;
+  overflow: hidden;
 }
 
 .menu .menu-card .menu-item .image img {
@@ -685,6 +686,29 @@ input[type="submit"] {
       align-content: space-between;
   max-width: 62.41%;
   width: 100%;
+}
+
+.menu .menu-card .menu-item .name,
+.menu .menu-card .menu-item .details {
+  line-height: 20px;
+}
+
+.menu .menu-card .menu-item .name {
+  color: white;
+  font-size: 20px;
+  font-family: "Roboto Slab", serif;
+  margin-bottom: 20px;
+}
+
+.menu .menu-card .menu-item .name p {
+  margin: 0;
+}
+
+.menu .menu-card .menu-item .details {
+  color: #ddd;
+  font-size: 20px;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 300;
 }
 
 .menu .menu-card .menu-item .info,
@@ -713,12 +737,27 @@ input[type="submit"] {
   display: flex;
 }
 
+.menu .menu-card .menu-item .price span {
+  border-radius: 5px 0px 0px 5px;
+  padding: 5px 10px;
+  background-color: #8bcc9a;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: white;
+}
+
 .menu .menu-card .menu-item .basket {
-  font-size: 25px;
   padding: 5px 10px;
   background-color: #b30908;
-  color: white;
   border-radius: 0 5px 5px 0px;
+  font-size: 25px;
 }
 
 .menu .menu-card .menu-item .basket button.add {
@@ -729,21 +768,6 @@ input[type="submit"] {
 .menu .menu-card .menu-item .basket button.remove {
   display: none;
   color: white;
-}
-
-.menu .menu-card .menu-item .price span {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 5px 10px;
-  background-color: #8bcc9a;
-  border-radius: 5px 0px 0px 5px;
 }
 
 .menu .menu-card .menu-item .count {
@@ -780,7 +804,14 @@ input[type="submit"] {
           order: 2;
 }
 
-.menu .menu-card .menu-item .count button {
+.menu .menu-card .menu-item .count .add,
+.menu .menu-card .menu-item .count .remove {
+  border: 1px solid white;
+  color: white;
+  border-radius: 50%;
+  height: 30px;
+  width: 30px;
+  font-size: 15px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -790,40 +821,24 @@ input[type="submit"] {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  color: white;
-  font-family: "Open Sans", sans-serif;
-  height: 25px;
-  width: 25px;
-  border: 1px solid white;
-  border-radius: 50%;
-  font-size: 20px;
 }
 
-.menu .menu-card .menu-item .count button svg {
-  fill: white;
+.menu .menu-card .menu-item .count .add svg,
+.menu .menu-card .menu-item .count .remove svg {
+  color: white;
 }
 
 .menu .menu-card .menu-item .alergen {
+  display: none;
+  height: 30px;
+  width: 30px;
+  border: 1px solid white;
+  border: 1px solid red;
+  border-radius: 50%;
   text-align: center;
   font-family: "Open Sans", sans-serif;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  font-weight: 300;
   font-size: 10px;
-  height: 18px;
-  width: 18px;
-  border: 1px solid white;
-  border-radius: 50%;
-}
-
-.menu .menu-card .menu-item .details {
-  font-family: "Open Sans", sans-serif;
 }
 
 .menu .menu-card .category {
@@ -860,7 +875,7 @@ input[type="submit"] {
   display: none;
   text-align: left;
   margin-top: 0px;
-  font-size: 20px;
+  font-size: 18px;
 }
 
 .menu .alergens button {
@@ -901,7 +916,7 @@ input[type="submit"] {
 .menu .alergens li {
   -ms-flex-preferred-size: 100%;
       flex-basis: 100%;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: normal;
 }
 
@@ -909,7 +924,6 @@ input[type="submit"] {
   height: 100vh;
   width: 100vw;
   top: -100%;
-  background-color: black;
   position: fixed;
   left: 0;
   display: -webkit-box;
@@ -919,15 +933,26 @@ input[type="submit"] {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  padding: 75px 20px;
   z-index: 2;
   overflow: auto;
   -webkit-transition: top 0.3s;
   transition: top 0.3s;
-  color: white;
+  color: black;
+}
+
+.menu .order .wrapper {
+  position: relative;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 1280px;
+  background-color: white;
+  background-attachment: fixed;
+  background-size: cover;
+  min-height: 100vh;
 }
 
 .menu .order .container {
+  margin-top: 150px;
   max-width: 600px;
 }
 
@@ -944,7 +969,7 @@ input[type="submit"] {
 }
 
 .menu .order .close svg {
-  color: white;
+  color: black;
 }
 
 .menu .order h3 {
@@ -1046,10 +1071,10 @@ input[type="submit"] {
 .menu .order a,
 .menu .order button.save {
   padding: 10px 20px;
-  border: 1px solid white;
+  border: 1px solid black;
   display: block;
   text-align: center;
-  color: white;
+  color: black;
   margin-left: auto;
 }
 
@@ -1060,16 +1085,16 @@ input[type="submit"] {
 .menu .customize-pizza {
   max-width: 800px;
   padding: 20px;
-  background-color: black;
-  color: white;
+  background-color: white;
+  color: black;
 }
 
 .menu .customize-pizza svg {
-  color: white;
+  color: black;
 }
 
 .menu .customize-pizza button {
-  color: white;
+  color: black;
 }
 
 .menu .customize-pizza .header {
@@ -1102,7 +1127,7 @@ input[type="submit"] {
 }
 
 .menu .customize-pizza .size-button.active {
-  background-color: green;
+  background-color: #8bcc9a;
   color: white;
 }
 
@@ -1144,6 +1169,11 @@ input[type="submit"] {
   margin-left: 10px;
 }
 
+.menu .customize-pizza .addon .plus[disabled] svg,
+.menu .customize-pizza .addon .minus[disabled] svg {
+  color: #ddd;
+}
+
 .menu .customize-pizza .price-summary {
   font-weight: bold;
   text-align: right;
@@ -1166,13 +1196,13 @@ input[type="submit"] {
 .menu .customize-pizza .buttons .cancel {
   margin-right: 10px;
   padding: 10px 20px;
-  background-color: #b60609;
+  background-color: #b30908;
   color: white;
 }
 
 .menu .customize-pizza .buttons .save {
   padding: 10px 20px;
-  background-color: green;
+  background-color: #8bcc9a;
   color: white;
 }
 
@@ -1216,6 +1246,9 @@ input[type="submit"] {
   .menu .navigation .menu-expand {
     display: none;
   }
+  .menu .navigation .title {
+    display: block;
+  }
   .menu .alergens {
     display: block;
   }
@@ -1256,8 +1289,6 @@ input[type="submit"] {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  padding: 75px 20px;
-  background-color: black;
   color: white;
   -webkit-transition: top 0.3s;
   transition: top 0.3s;
@@ -1268,8 +1299,19 @@ input[type="submit"] {
   top: 0;
 }
 
+.menu .login .wrapper {
+  position: relative;
+  background-color: black;
+  background-attachment: fixed;
+  background-size: cover;
+  min-height: 100vh;
+  width: 100%;
+  margin: 0 auto;
+}
+
 .menu .login form {
   margin: 0 auto;
+  margin-top: 150px;
   max-width: 300px;
 }
 
@@ -1300,12 +1342,12 @@ input[type="submit"] {
 .menu .login .buttons .cancel {
   margin-right: 10px;
   padding: 10px 20px;
-  background-color: #b60609;
+  background-color: #b30908;
   color: white;
 }
 
 .menu .login .buttons .save {
-  background-color: #77aa03;
+  background-color: #8bcc9a;
   color: white;
   padding: 10px 20px;
 }
@@ -1339,7 +1381,7 @@ input[type="submit"] {
 
 .menu .app img {
   max-width: 100%;
-  background-color: #b60609;
+  background-color: #b30908;
   border-radius: 10px;
   padding: 10px;
 }
