--- a/styles/scss/menu/_login.scss
+++ b/styles/scss/menu/_login.scss
@@ -1,6 +1,7 @@
 .login {
   z-index: 2;
   position: fixed;
+
   height: 100vh;
   width: 100vw;
   left: 0;
@@ -9,10 +10,7 @@
   display: flex;
   flex-direction: column;
 
-  padding: $hidden-menu-paddings;
-
-  background-color: rgba(0, 0, 0, 1);
-  color: $hidden-menu-color;
+  color: $login-font-color;
 
   transition: top 0.3s;
   overflow: auto;
@@ -21,8 +19,23 @@
     top: 0;
   }
 
+  .wrapper {
+    position: relative;
+
+    // background-image: url("../../images/background.jpg");
+    background-color: black;
+    background-attachment: fixed;
+    background-size: cover;
+
+    min-height: 100vh;
+    width: 100%;
+
+    margin: 0 auto;
+  }
+
   form {
     margin: 0 auto;
+    margin-top: 150px;
     max-width: 300px;
   }
 
@@ -34,7 +47,7 @@
     cursor: pointer;
 
     svg {
-      color: white;
+      color: $login-font-color;
     }
   }
 
@@ -48,12 +61,12 @@
       margin-right: 10px;
       padding: 10px 20px;
 
-      background-color: $red;
-      color: white;
+      background-color: $login-cancel-background-color;
+      color: $login-cancel-color;
     }
     .save {
-      background-color: $green;
-      color: white;
+      background-color: $login-save-background-color;
+      color: $login-save-color;
       padding: 10px 20px;
     }
 
