--- a/styles/scss/menu/_menu-navigation.scss
+++ b/styles/scss/menu/_menu-navigation.scss
@@ -1,30 +1,34 @@
 .menu-navigation {
   overflow-y: auto;
-  font-size: 25px;
-  color: $navigation-color;
   min-width: 25.51%;
-  overflow-y: auto;
 
+  font-size: $menu-navigation-font-size;
+  color: $menu-navigation-color;
   font-weight: bold;
+
+  overflow-y: auto;
 
   h1 {
     text-align: center;
     font-weight: bold;
-    color: $red;
-    margin: 20px 0;
-    font-size: 40px;
+    color: $menu-navigation-header-color;
+    margin: $margins 0;
+    font-size: $menu-navigation-header-font-size;
   }
 
   ul {
-    font-family: $font-3;
-    letter-spacing: 1px;
     height: 100%;
+    width: 100%;
+    padding: 0;
+
     list-style-type: none;
+
     display: flex;
     flex-direction: column;
     justify-items: stretch;
-    padding: 0;
-    width: 100%;
+
+    font-family: $menu-navigation-font-family;
+    letter-spacing: 1px;
 
     a {
       white-space: nowrap;
@@ -35,7 +39,7 @@
     }
 
     a.active {
-      color: $green2;
+      color: $menu-active-navigation-color;
     }
   }
 
