--- a/styles/scss/menu/_menu.scss
+++ b/styles/scss/menu/_menu.scss
@@ -15,7 +15,7 @@
   background-image: url("../../images/background.jpg");
   background-attachment: fixed;
   background-size: cover;
-  min-height: calc(100vh -20px);
+  min-height: 100vh;
 
   padding: 10px 20px;
   max-width: 1280px;
