--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -1123,6 +1123,7 @@ input[type="submit"] {
       -ms-flex-positive: 1;
           flex-grow: 1;
   padding: 10px 20px;
+  border-radius: 10px;
   text-align: center;
 }
 
@@ -1196,6 +1197,7 @@ input[type="submit"] {
 .menu .customize-pizza .buttons .cancel {
   margin-right: 10px;
   padding: 10px 20px;
+  border-radius: 10px;
   background-color: #b30908;
   color: white;
 }
@@ -1204,6 +1206,7 @@ input[type="submit"] {
   padding: 10px 20px;
   background-color: #8bcc9a;
   color: white;
+  border-radius: 10px;
 }
 
 .menu .customize-pizza .changes {
@@ -1217,19 +1220,22 @@ input[type="submit"] {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.menu .customize-pizza .amount input {
-  width: 50px;
-  padding: 10px;
+.menu .customize-pizza .amount span {
+  color: #8bcc9a;
+  font-size: 20px;
+  margin: 0 10px;
 }
 
 .menu .customize-pizza .amount button {
-  height: 50px;
-  width: 50px;
+  font-size: 16px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1239,7 +1245,6 @@ input[type="submit"] {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  border: 1px solid white;
 }
 
 @media (min-width: 700px) {
