--- a/styles/scss/menu/_media.scss
+++ b/styles/scss/menu/_media.scss
@@ -1,4 +1,15 @@
 @media (min-width: 700px) {
+  .app {
+    p {
+      font-size: 14px !important;
+      line-height: 14px !important;
+    }
+
+    small {
+      font-size: 12px !important;
+      line-height: 12px !important;
+    }
+  }
   .navigation {
     .menu-expand {
       display: none;
@@ -39,6 +50,20 @@
   }
 }
 
+@media (min-width: 917px) {
+  .app {
+    p {
+      font-size: 18px !important;
+      line-height: 18px !important;
+    }
+
+    small {
+      font-size: 14px !important;
+      line-height: 14px !important;
+    }
+  }
+}
+
 @media (min-width: 1200px) {
   .menu-card {
     .menu-item {
@@ -49,6 +74,19 @@
   .menu-navigation {
     .app .content {
       flex-wrap: nowrap;
+    }
+  }
+
+  .app {
+    .text {
+      p {
+        font-size: 20px !important;
+        line-height: 20px !important;
+      }
+      small {
+        font-size: 16px !important;
+        line-height: 16px !important;
+      }
     }
   }
 }
