--- a/styles/scss/menu/_menu-navigation.scss
+++ b/styles/scss/menu/_menu-navigation.scss
@@ -42,6 +42,12 @@
     }
   }
 
+  li:nth-child(1) {
+    a {
+      padding-top: 0;
+    }
+  }
+
   li {
     display: flex;
     align-items: center;
